--- a/streamline/user_files/configs.json
+++ b/streamline/user_files/configs.json
@@ -1,5 +1,5 @@
 {
-  "zones": ["us-central1-k"],
+  "zones": ["us-central1-b", "us-central1-c", "us-central1-f", "us-central1-a"],
   "gpu": "nvidia-tesla-t4",
   "gpu_count": 1,
   "family": "pytorch-1-4-cu101",
