--- a/streamline/user_files/configs.json
+++ b/streamline/user_files/configs.json
@@ -2,13 +2,15 @@
   "zones": ["us-central1-b", "us-central1-c", "us-central1-f", "us-central1-a"],
   "gpu": "nvidia-tesla-t4",
   "gpu_count": 0,
-  "family": "pytorch-1-4-cu101",
+  "family": "pytorch-1-4-cpu",
   "diskSizeGb": "100",
   "preemptible": true,
   "name_prefix": "vm",
   "cpu_count": 2,
   "comments": [
     "cpu counts must be a power of 2",
-    "quota limits me to 1 GPU currently"
+    "quota limits me to 1 GPU currently",
+    "gpu family: pytorch-1-4-cu101",
+    "cpu family: pytorch-1-4-cpu"
   ]
 }
